fixed sidebar not showing up well

--- a/src/styles/app/landing.css
+++ b/src/styles/app/landing.css
@@ -103,12 +103,12 @@
     padding: 0rem 2rem;
     top: 0%;
     left: 0%;
-    z-index: 12;
+    z-index: 30;
     transition: background-color .4s ease-in-out, width .4s ease-in-out, margin 1s ease-in-out;
 }
 
 .landing__sidebar-toggler{
-    z-index: 15;
+    z-index: 10;
     transition: transform .4s ease-in-out, opacity .4s ease-in-out;
 }
 
@@ -116,6 +116,8 @@
     transform: scale(1.1);
     opacity: 0;
 }
+
+
 
 
 .landing__navbar-brand{
@@ -235,7 +237,13 @@
     cursor: pointer;
     /* transition: transform .5s ease-in-out; */
 }
-
+.landing__sidebar-toggle-close{
+    cursor: pointer;
+    position: absolute;
+    top: 5%;
+    left: 25%;
+    /* transition: transform .5s ease-in-out; */
+}
 /* .landing__sidebar-toggle:active{
     transform: scale(1.1);
 } */
